# Soul

./: .env.example  .gitignore  README.md  SOUL.md  pyproject.toml
gateway/: README.md  package-lock.json  package.json
gateway/files/: README.md  agent-runtime.js  gateway-control-plane.js  gateway.js  main.js  memory-manager.js  session-manager.js  tool-runner.js
gateway/src/: agent-runtime.js  config.js  fresh-start.js  gateway-control-plane.js  index.js  login.js  message.js  outbox.js  process-lock.js  processed-message-store.js  session-manager.js  session.js  soul-bridge.js  whatsapp-gateway.js
scripts/: login_whatsapp_gateway.sh  queue_whatsapp_message.py  run_cli_prompts.py  run_cli_prompts_cron.sh  run_gateway_request.py  start_whatsapp_gateway.sh
src/soul/: __init__.py  __main__.py  cli.py  config.py  identity.py  index.py  llm.py  memory.py  models.py
src/soul.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/soul/agent/: __init__.py  agent.py  executor.py  llm.py  memory.py  orchestrator.py  planner.py  prompts.py  responder.py  runner.py  scratchpad.py  tools.py  types.py  validator.py
src/soul/agents/: __init__.py  core.py  research.py
src/soul/model/: __init__.py  llm.py
src/soul/models/: __init__.py  llm.py
src/soul/storage/: __init__.py  memory.py
src/soul/tools/: __init__.py  base.py  fetch.py  memory_read.py  memory_write.py  registry.py  scrape.py  search.py  web_fetch.py  web_search.py
src/soul/utils/: __init__.py  text.py  validation.py
