[project]
name = "soul"
version = "0.1.0"
description = "Local-first CLI assistant with memory, research tools, and small-model Ollama defaults."
readme = "README.md"
authors = [
    { name = "Harsh Bhatt", email = "harshbhatt7585@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
soul = "soul:main"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"
