[project]
name = "soul"
version = "0.1.0"
description = "Dexter-inspired local CLI assistant scaffold implemented in Python."
readme = "README.md"
authors = [
    { name = "Harsh Bhatt", email = "harshbhatt7585@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.1",
]

[project.scripts]
soul = "soul.index:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
